--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ a {
     object-fit: cover;
 }
 
-/* OFFER */
+/* CALCULATOR */
 .calculating {
     padding: 50px 0;
 }
@@ -378,20 +378,24 @@ a {
 .menu {
     padding: 40px 0 50px 0;
 }
+
 .menu .container {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
 }
+
 .menu .title {
     text-align: center;
 }
+
 .menu__field {
     margin-top: 50px;
     padding: 50px 0;
     width: 100%;
     background: rgba(249, 254, 126, .25);
 }
+
 .menu__item {
     width: 320px;
     min-height: 450px;
@@ -400,34 +404,139 @@ a {
     font-size: 16px;
     font-weight: 300;
 }
+
 .menu__item img {
     width: 100%;
     height: 200px;
     object-fit: cover;
 }
+
 .menu__item-subtitle {
     font-weight: 700;
     font-size: 18px;
     padding: 0 20px;
     margin-top: 20px;
 }
+
 .menu__item-descr {
     margin-top: 20px;
     padding: 0 20px;
 }
+
 .menu__item-divider {
     width: 100%;
     height: 1px;
     background-color: rgba(0, 0, 0, .25);
     margin-top: 40px;
 }
+
 .menu__item-price {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
 }
+
 .menu__item-price span {
     font-size: 24px;
+    font-weight: 700;
+}
+
+/* ORDER */
+.order {
+    padding-bottom: 80px;
+}
+.order .title {
+    text-align: center;
+}
+
+.order__form {
+    margin-top: 70px;
+    padding: 0 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.order__form img {
+    transform: scale(1.5);
+}
+
+.order__input {
+    width: 280px;
+    height: 50px;
+    background: #fff;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, .2);
+    border: none;
+    font-size: 18px;
+    text-align: center;
+    padding: 0 20px;
+    outline: 0;
+}
+
+/* PROMOTION */
+.promotion {
+    padding: 70px 0 240px 0;
+    position: relative;
+}
+
+.promotion .container {
+    display: flex;
+}
+
+.promotion .bgc_y {
+    position: absolute;
+    width: 50%;
+    height: 499px;
+    background: rgba(243, 255, 222, .35);
+    z-index: -1;
+    top: -50px;
+    left: 0;
+}
+.promotion__text {
+    width: 50%}
+.promotion__descr {
+    margin-top: 40px;
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 300;
+}
+
+.promotion__descr span {
+    font-weight: 700;
+    font-size: 26px;
+}
+
+.promotion__timer {
+    width: 50%
+}
+
+.promotion__timer .title {
+    text-align: right;
+}
+
+.promotion__timer .timer {
+    margin-top: 60px;
+    padding-left: 95px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.promotion__timer .timer__block {
+    width: 102px;
+    height: 120px;
+    background: #fff;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, .25);
+    font-size: 16px;
+    font-weight: 300;
+    text-align: center;
+}
+
+.promotion__timer .timer__block span {
+    display: block;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    font-size: 56px;
     font-weight: 700;
 }
