--- a/css/style.css
+++ b/css/style.css
@@ -493,8 +493,11 @@ a {
     top: -50px;
     left: 0;
 }
+
 .promotion__text {
-    width: 50%}
+    width: 50%
+}
+
 .promotion__descr {
     margin-top: 40px;
     font-size: 20px;
@@ -539,4 +542,124 @@ a {
     margin-bottom: 5px;
     font-size: 56px;
     font-weight: 700;
+}
+
+/* FOOTER */
+.footer {
+    min-height: 180px;
+    background-color: #303030;
+    padding: 45px 0 50px 0;
+    color: #fff;
+}
+
+.footer .container {
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.footer .subtitle {
+    font-size: 20px;
+}
+
+.footer .link {
+    display: block;
+    margin-top: 15px;
+    font-size: 16px;
+    color: #fff;
+}
+
+.footer .call {
+    text-align: right;
+}
+
+/* MODAL */
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1050;
+    display: none;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, .5);
+}
+
+.modal__dialog {
+    max-width: 500px;
+    margin: 40px auto;
+}
+
+.modal__content {
+    position: relative;
+    width: 100%;
+    padding: 40px;
+    background-color: #fff;
+    border: 1px solid rgba(0, 0, 0, .2);
+    border-radius: 4px;
+    max-height: 80vh;
+    overflow-y: auto;
+}
+
+.modal__close {
+    position: absolute;
+    top: 8px;
+    right: 14px;
+    font-size: 30px;
+    color: #000;
+    opacity: .5;
+    font-weight: 700;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.modal__title {
+    text-align: center;
+    font-size: 22px;
+    text-transform: uppercase;
+}
+
+.modal__input {
+    display: block;
+    margin: 20px auto 20px auto;
+    width: 280px;
+    height: 50px;
+    background: #fff;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, .2);
+    border: none;
+    font-size: 18px;
+    text-align: center;
+    padding: 0 20px;
+    outline: 0;
+}
+
+.modal .btn {
+    display: block;
+    width: 280px;
+    margin: 0 auto;
+}
+
+.show {
+    display: block;
+}
+
+.hide {
+    display:  none;
+}
+
+.fade {
+    animation-name: fade;
+     animation-duration:  1.5s;
+}
+
+@keyframes fade {
+    from {
+    opacity:  0.1;
+}
+ to  {
+    opacity:  1;
+}
 }
